--- a/Front-end/BlogBruno/src/app/rodape/rodape.component.html
+++ b/Front-end/BlogBruno/src/app/rodape/rodape.component.html
@@ -1,10 +1,10 @@
-<footer class="page-footer font-small bg-secundary pt-4">
+<footer class="page-footer font-small bg-secondary pt-4">
 
     <div class="container">
 
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
-                <h4 class="text-white" >Siga-nos nas redes sociais</h4>
+                <h3 class="text-black-50" >Siga-nos nas redes sociais</h3>
             </div>
         </div>
 
@@ -13,8 +13,25 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <ul class="social-network">
                     <li>
-                        <a href="https://www.facebook.com/" target="_blank" class="iconFacebook0"></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="iconFacebook">
+                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                         </a>
                     </li>
+                    <li>
+                        <a href="https://github.com/BRNDANIEL" target="_blank" class="iconGit">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+
+                         </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.linkedin.com/in/bruno-daniel-b6289021b/" target="_blank" class="iconlikedin">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+
+                         </a>
+                    </li>
+
+
                 </ul>
 
             </div>
