--- a/Front-end/BlogBruno/src/app/cadastro/cadastro.component.html
+++ b/Front-end/BlogBruno/src/app/cadastro/cadastro.component.html
@@ -11,33 +11,33 @@
 
                     <div class="form-group">
                         <label for="Nome">Nome</label>
-                        <input class="form-control" type="text" name="Nome" id="Nome" placeholder="Nome">
+                        <input  [(ngModel)]= 'user.nome' class="form-control" type="text" name="Nome" id="Nome" placeholder="Nome">
                     </div>
 
                     <div class="form-group">
                         <label for="Usuario">Usuario</label>
-                        <input class="form-control" type="text" name="Usuario" id="Usuario" placeholder="usuario">
+                        <input  [(ngModel)]= 'user.usuario' class="form-control" type="text" name="Usuario" id="Usuario" placeholder="usuario">
                     </div>
 
                     <div class="form-group">
                         <label for="Foto">Link da foto</label>
-                        <input class="form-control" type="text" name="Foto" id="Foto" placeholder="Link da foto">
+                        <input [(ngModel)]= 'user.Foto' class="form-control" type="text" name="Foto" id="Foto" placeholder="Link da foto">
                     </div>
 
                     <div class="form-group">
-                        <label for="Senha">Senha</label>
-                        <input class="form-control" type="password" name="Senha" id="Senha" placeholder="Senha">
+                        <label  for="Senha">Senha</label>
+                        <input (input)= 'confirmSenha($event)' class="form-control" type="password" name="Senha" id="Senha" placeholder="Senha">
                     </div>
 
                     <div class="form-group">
                         <label for="ConfirmSenha">Confirmar senha</label>
-                        <input class="form-control" type="password" name="ConfirmSenha" id="ConfirmSenha"
+                        <input [(ngModel)]= 'user.senha' class="form-control" type="password" name="ConfirmSenha" id="ConfirmSenha"
                             placeholder="Confirmar senha">
                     </div>
 
                     <div class="form-grup">
                         <label for="Tipo">Tipo de usuario</label>
-                        <select class="form-control" name="Tipo" id="Tipo">
+                        <select class="form-control" name="Tipo" id="Tipo" (change)='tipoUser=($event)'>
                             <option>Selecione um tipo de usuario</option>
                             <option value="Normal">Normal</option>
                             <option value="Admin">Admin</option>
@@ -45,8 +45,8 @@
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-danger mr-4">Cancelar</button>
-                        <button type="submit" class="btn btn-success mr-4">Cadastrar</button>
+                        <button type="submit" class="btn btn-danger mr-4" routerLink='/login'>Cancelar</button>
+                        <button type="submit" class="btn btn-success mr-4"(click)='Cadastrar()' >Cadastrar</button>
                     </div>
 
                 </div>
