--- a/Front-end/BlogBruno/src/app/login/login.component.html
+++ b/Front-end/BlogBruno/src/app/login/login.component.html
@@ -11,22 +11,22 @@
 
                     <div class="form-group">
                         <label for="Usuario">Usuario</label>
-                        <input class="form-control" type="text" name="Usuario"id="Usuario" placeholder="usuario">
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="Usuario"id="Usuario" placeholder="usuario">
                          </div>
 
                      <div class="form-group">
                        <label for="Senha">Senha</label>
-                       <input class="form-control" type="password" name="Senha"id="Senha" placeholder="Senha">
+                       <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="Senha"id="Senha" placeholder="Senha">
                          </div>
                          
                          <div class="d-flex justify-content-center">
-                             <button type="submit]" class=" btn btn-success"> Entrar</button>
+                             <button type="submit]" class=" btn btn-success" (click)='entrar()' > Entrar</button>
                          </div>
 
                             <hr class="mt-5 mb-5">
 
                             <p class="text-center"> 
-                                Não tem conta? <a href="">Cadastre-se</a>
+                                Não tem conta? <a routerLink='/cadastro' >Cadastre-se</a>
 
 
                             </p>
